tests/errors/list_type_mismatch_division.dang
# This should fail: mixing String and Int lists in division
let result = [] / ["foo"] / [3]
